@startuml "Diagrama de Classes - Pedido"

top to bottom direction

class Order {
    -id: int
    -code: str
    -date_created: Date
    -status: str
    -client: Client

    +createOrder(code_client: str): Order
    +orderExists(code_order: str): bool
    +deleteOrder(code_order: str): void
    +updateOrder(code_order: str): Order
    +returnOrder(time_interval: dict, status: str, code_client: str): list
    +listAllOrders(): list
    +getOrderByCode(code_order: str): Order
}

class Client {
    -id: int
    -name: str
    -code: str
    -doc_type: str
    -doc: str
    -contact: str
    -email: str
    -state_register: str

    +clientSave(client: Client): Client
    +contactAlreadyRegistered(contact: str): bool
    +emailtAlreadyRegistered(email: str): bool
    +clientHasAdress(code_client: str): bool
    +clientExists(code_client: str, doc: str): bool
    +clientReturn(doc: str, code_client: str, name: str): Any
    +clientDelete(doc: str, code_client: str): void
    +clientList(): list
    +clientModify(client: Client, code_client: str): Client
}

class Product {
    -id: int
    -name: str
    -code: str
    -price: float
    -description: str
    -type: str
    -measure: str
    -licensed: bool

    +productSave(product: Product): Product
    +nametAlreadyRegistered(name: str): bool
    +productExists(code_product: str): bool
    +productUpdate(product: Product, code_product: str): Product
    +productDelete(code_product: str): void
    +productReturn(code_product: str, name: str): Product
    +productList(): list
    +productUpdatePrice(code_product: str, name: str, price: float): Product
    +productUpdateDiscount(code_product: str, name: str, discount: float): Product
}

class Snapshot {
    -code: str
    -product: Product
    -price: float
    -discount: float

    +saveSnapshot(code_product: str, price: float): Snapshot
    +updateSnapshot(code_snapshot: str, price: float, discount: float): Snapshot
}

class OrderItem {
    -product: Product
    -order: Order
    -amount: int
    -price: float
    -discount: float

    +saveItem(code_order: str, code_product: str, amount: int): OrderItem
    +returnItem(code_order: str): list
    +updateItem(code_order: str, code_product: str, amount: int): OrderItem
}

class OrderService {
    +createOrder(code_client: str): Response
    +listOrder(): Response
    +returnOrder(time_interval: dict, status: str, code_client: str): Response
    +getOrderByCode(code_order: str): Response
    +updateOrder(code_order: str): Response
    +deleteOrder(code_order: str): Response
}

class OrderItemService {
    +saveItem(code_order: str, code_product: str, amount: int): Response
    +updateItem(code_order: str, code_product: str, amount: int): Response
    +returnItem(code_order: str): Response
}

class SnapshotService {
    +saveSnapshot(code_product: str, price: float): Response
    +updateSnapshot(code_snapshot: str, price: float, discount: float): Response
}

class Response {
    -menssage: str 
    -status: int 
    -value: Any
    -sucess: bool

    +sucessMens(mensage: str, value: Any): void
    +erroMens(menssage: str, status: int): void
    +toDict(): dict
}

Order "1" *-- "0..*" OrderItem: contém
Order --> Client
OrderItem --> Product
Snapshot --> Product

OrderService --> Order
OrderService --> Client
OrderService --> Response

OrderItemService --> OrderItem
OrderItemService --> Order
OrderItemService --> Product
OrderItemService --> Response

SnapshotService --> Snapshot
SnapshotService --> Product
SnapshotService --> Response

@enduml